--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   ],
   "author": "Shane Tomlinson",
   "license": "MPL2.0",
-  "devDependencies": {
-    "mocha": "^1.20.0"
-  },
   "dependencies": {
-    "joi": "^4.5.0",
+    "bluebird": "1.2.4",
+    "cors": "2.3.1",
+    "express": "4.4.0",
     "glob-require": "0.0.1",
-    "cors": "^2.3.1"
+    "joi": "4.5.0"
+  },
+  "devDependencies": {
+    "chai": "1.9.1",
+    "mocha": "1.20.0",
   }
 }
