--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Router scaffolding for connect/express apps",
   "main": "index.js",
   "scripts": {
-    "test": "npm run-script lint && npm run-script coverage && npm run-script shippable-report",
+    "test": "npm run-script lint && npm run-script coverage",
     "lint": "./node_modules/.bin/jshint -c .jshintrc lib/ test/",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive test",
-    "shippable-report": "./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/"
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --recursive test"
   },
   "repository": {
     "type": "git",
