--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   "author": "Shane Tomlinson",
   "license": "MPL2.0",
   "dependencies": {
-    "bluebird": "2.8.2",
+    "bluebird": "2.9.9",
     "cors": "2.5.3",
     "glob-require": "0.0.1",
-    "joi": "4.5.0"
+    "joi": "5.1.0"
   },
   "devDependencies": {
-    "chai": "1.10.0",
-    "express": "4.11.1",
+    "chai": "~2.0.0",
+    "express": "~4.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
     "mocha": "2.1.0"
